# quasar

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python.yml
benches/: basic_ops.rs
examples/: 01_basic_operations.rs  02_autograd.rs  03_neural_network.rs  04_matrix_operations.rs  05_performance_demo.rs  arithmetic_ops.rs  basic_usage.rs  complete_neural_network.rs  debug_neural_network.rs  full_backward.rs  mul_autograd.rs  neural_network.rs  neural_network_test.rs  parallel_neural_network.rs  simple_autograd.rs  test_refactoring.rs
src/: error.rs  lib.rs  prelude.rs
src/autograd/: engine.rs  function.rs  graph.rs  mod.rs  parallel.rs  variable.rs
src/backend/: mod.rs
src/backend/cpu/: blas.rs  kernels.rs  mod.rs  simd.rs
src/core/: dtype.rs  mod.rs  shape.rs  tensor.rs
src/memory/: aligned.rs  allocator.rs  mod.rs  pool.rs
src/ops/: activation.rs  arithmetic.rs  creation.rs  linalg.rs  mod.rs  parallel_ops.rs  reduction.rs
src/utils/: mod.rs  profiling.rs  testing.rs
tests/: arithmetic.rs  autograd.rs  memory.rs  mod.rs  tensor.rs
